input and output JSON

--- a/index.html
+++ b/index.html
@@ -108,6 +108,13 @@
               <input class="row responsible_input" type="text" placeholder="Head of Department Ph.D John Doe" maxlength="180"/>
             </div>
           </div>
+          <div class="row degree_input_row">
+            <div class="col details_input_col">
+              <label for="json_file">Upload JSON file instead of manual input</label>
+              <input type="file" id="json_file" name="json_file" accept="application/json">
+              <button class="btn btn-dark col-3 text-center menu_btn btn_fill">Fill from File</button>
+            </div>            
+          </div>
         </div>
       </div>
     </section>
