Source Code link

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <h2>Fill the table and calculate</h2>
         <h2>PRESS Calculate BEFORE Exporting</h2>
         <h3>Exporting will create will create a transcript for ASOIU</h3>
+        <h4>Source Code: <a href="https://github.com/Ugusu/GPA_calculator" target="_blank">https://github.com/Ugusu/GPA_calculator</a></h4>
     </section>
     <section class="details_input_container container col-12 levelformcontainer">
       <div class="row">
